# Rcpp

./: .gitignore  CMakeLists.txt  README.md
src/rcpp/: CMakeLists.txt  prc.h  pweak.h  rc.h  weak.h
tests/: CMakeLists.txt
tests/common/: CMakeLists.txt  InstanceCounter.cpp  InstanceCounter.h  MemoryGuard.cpp  MemoryGuard.h
tests/prc/: CMakeLists.txt  tst_prc.cpp
tests/pweak/: CMakeLists.txt  tst_pweak.cpp
tests/rc/: CMakeLists.txt  tst_rc.cpp
tests/weak/: CMakeLists.txt  tst_weak.cpp
